--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.3",
     "@vue/tsconfig": "^0.5.0",
+    "autoprefixer": "^10.4.19",
     "cypress": "^13.6.1",
     "eslint": "^8.49.0",
     "eslint-plugin-cypress": "^2.15.1",
@@ -50,10 +51,12 @@
     "jsdom": "^23.0.1",
     "miragejs": "^0.1.48",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.38",
     "prettier": "^3.0.3",
     "sass": "^1.71.0",
     "start-server-and-test": "^2.0.3",
     "storybook": "^8.1.6",
+    "tailwindcss": "^3.4.4",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
     "vitest": "^1.0.4",
