--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,12 +15,9 @@
     "types": ["node"],
     "paths": {
       "@/*": ["./src/*"],
-      "@ui/*": ["./src/app/ui/*"],
-      "@shared/*": ["./src/app/shared/*"],
-      "@router/*": ["./src/app/router/*"],
+      "@app/*": ["./src/app/*"],
       "@assets/*": ["./src/assets/*"],
       "@modules/*": ["./src/modules/*"],
-      "@translation/*": ["./src/app/translation/*"],
     }
   }
 }
