--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -7,12 +7,9 @@
     "types": ["node", "jsdom"],
     "paths": {
       "@/*": ["./src/*"],
-      "@ui/*": ["./src/app/ui/*"],
-      "@shared/*": ["./src/app/shared/*"],
-      "@router/*": ["./src/app/router/*"],
+      "@app/*": ["./src/app/*"],
       "@assets/*": ["./src/assets/*"],
       "@modules/*": ["./src/modules/*"],
-      "@translation/*": ["./src/app/translation/*"],
     }
   }
 }
