--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.3.5",
     "pinia": "^2.1.7",
+    "storybook-vue3-router": "^5.0.0",
     "vue": "^3.3.11",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.2.5"
