--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -10,6 +10,7 @@
       "@app/*": ["./src/app/*"],
       "@assets/*": ["./src/assets/*"],
       "@modules/*": ["./src/modules/*"],
+      "@tests/*": ["./src/app/shared/tests/*"],
     }
   }
 }
