--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.3.5",
+    "flush-promises": "^1.0.2",
     "pinia": "^2.1.7",
     "storybook-vue3-router": "^5.0.0",
     "vue": "^3.3.11",
