feature: handle Unauthorized error

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_APP_API_PORT = "api-test.sesametime.com"
+VITE_APP_API_PORT = "https://api-test.sesametime.com/"
 VITE_APP_API_NAMESPACE = "recruitment"
 VITE_APP_LOCALE = "es"
 VITE_APP_LOCALE_FALLBACK = "en"
