--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-base-architecture",
+  "name": "Challenge Sesame",
   "version": "0.0.0",
   "private": true,
   "type": "module",
